packages/gcn/src/snapshots/gcn__tests__cube_fragment_shader.snap
---
source: packages/gcn/src/lib.rs
expression: shader.debug()
---
[
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_wqm_b64,
                ssrc0: Destination(
                    ExecLo,
                ),
                sdst: ExecLo,
            },
        ),
        program_counter: 0,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_load_dwordx8,
                offset: 0,
                imm: true,
                sbase: 0,
                sdst: ScalarGPR(
                    8,
                ),
            },
        ),
        program_counter: 4,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_load_dwordx4,
                offset: 8,
                imm: true,
                sbase: 0,
                sdst: ScalarGPR(
                    0,
                ),
            },
        ),
        program_counter: 8,
    },
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_mov_b32,
                ssrc0: Destination(
                    ScalarGPR(
                        4,
                    ),
                ),
                sdst: M0,
            },
        ),
        program_counter: 12,
    },
    Instruction {
        inner: VINTRP(
            VINTRPInstruction {
                op: v_interp_p1_f32,
                vsrc: VectorGPR {
                    register_idx: 0,
                },
                attribute_channel: X,
                attr: Attr(
                    0,
                ),
                vdst: VectorGPR {
                    register_idx: 2,
                },
            },
        ),
        program_counter: 16,
    },
    Instruction {
        inner: VINTRP(
            VINTRPInstruction {
                op: v_interp_p2_f32,
                vsrc: VectorGPR {
                    register_idx: 1,
                },
                attribute_channel: X,
                attr: Attr(
                    0,
                ),
                vdst: VectorGPR {
                    register_idx: 2,
                },
            },
        ),
        program_counter: 20,
    },
    Instruction {
        inner: VINTRP(
            VINTRPInstruction {
                op: v_interp_p1_f32,
                vsrc: VectorGPR {
                    register_idx: 0,
                },
                attribute_channel: Y,
                attr: Attr(
                    0,
                ),
                vdst: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        program_counter: 24,
    },
    Instruction {
        inner: VINTRP(
            VINTRPInstruction {
                op: v_interp_p2_f32,
                vsrc: VectorGPR {
                    register_idx: 1,
                },
                attribute_channel: Y,
                attr: Attr(
                    0,
                ),
                vdst: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        program_counter: 28,
    },
    Instruction {
        inner: VOP1(
            VOP1Instruction {
                op: v_mov_b32,
                src0: VectorGPR(
                    VectorGPR {
                        register_idx: 0,
                    },
                ),
                vdst: VectorGPR {
                    register_idx: 3,
                },
            },
        ),
        program_counter: 32,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 49279,
            },
        ),
        program_counter: 36,
    },
    Instruction {
        inner: MIMG(
            MIMGInstruction {
                op: image_sample,
                dmask: DMask(
                    7,
                ),
                unorm: false,
                glc: false,
                da: false,
                r128: false,
                tfe: false,
                lwe: false,
                slc: false,
                vaddr: VectorGPR {
                    register_idx: 2,
                },
                vdata: VectorGPR {
                    register_idx: 0,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 2,
                },
                ssamp: ScalarGeneralPurposeRegisterGroup {
                    value: 0,
                },
            },
        ),
        program_counter: 40,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 16240,
            },
        ),
        program_counter: 48,
    },
    Instruction {
        inner: VOP2(
            VOP2Instruction {
                op: v_cvt_pkrtz_f16_f32,
                src0: VectorGPR(
                    VectorGPR {
                        register_idx: 0,
                    },
                ),
                vsrc1: VectorGPR {
                    register_idx: 1,
                },
                vdst: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        program_counter: 52,
    },
    Instruction {
        inner: VOP3(
            VOP3Instruction {
                op: VOP2(
                    v_cvt_pkrtz_f16_f32,
                ),
                vdst: VectorGPR {
                    register_idx: 1,
                },
                src0: TransformedOperand {
                    operand: VectorGPR(
                        VectorGPR {
                            register_idx: 2,
                        },
                    ),
                    abs: false,
                    neg: false,
                },
                src1: TransformedOperand {
                    operand: Scalar(
                        FloatConstant(
                            InlineFloatConstant {
                                value: 242,
                            },
                        ),
                    ),
                    abs: false,
                    neg: false,
                },
                src2: TransformedOperand {
                    operand: Scalar(
                        Destination(
                            ScalarGPR(
                                0,
                            ),
                        ),
                    ),
                    abs: false,
                    neg: false,
                },
                clamp: false,
                output_modifier: None,
            },
        ),
        program_counter: 56,
    },
    Instruction {
        inner: EXP(
            ExpInstruction {
                target: RenderTarget(
                    0,
                ),
                compress: true,
                done: true,
                valid_mask: true,
                vsrc0: Some(
                    VectorGPR {
                        register_idx: 0,
                    },
                ),
                vsrc1: Some(
                    VectorGPR {
                        register_idx: 1,
                    },
                ),
                vsrc2: Some(
                    VectorGPR {
                        register_idx: 128,
                    },
                ),
                vsrc3: Some(
                    VectorGPR {
                        register_idx: 128,
                    },
                ),
            },
        ),
        program_counter: 64,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_endpgm,
                simm16: 0,
            },
        ),
        program_counter: 72,
    },
]
